# roq-redis-bridge

./: CHANGELOG.md  CMakeLists.txt  README.md
conda/: meta.yaml
src/roq/adapter/redis/: .gitignore  CMakeLists.txt  README.md  application.cpp  application.hpp  config.cpp  config.hpp  controller.cpp  controller.hpp  key.hpp  main.cpp  test.sh
src/roq/adapter/redis/flags/: flags.cpp  flags.hpp
src/roq/bridge/redis/: .gitignore  CMakeLists.txt  README.md  application.cpp  application.hpp  config.cpp  config.hpp  controller.cpp  controller.hpp  key.hpp  main.cpp  settings.cpp  settings.hpp  test.sh
src/roq/bridge/redis/flags/: .gitignore  CMakeLists.txt  flags.cpp  flags.hpp
src/roq/bridge/redis/test/: .gitignore  CMakeLists.txt
test/: .gitignore  CMakeLists.txt
